review feedback changes